soup-message-io: fix reference leak

io_run_until forgets to release a reference it takes
in a cancellation error path.

This commit fixes that.

https://bugzilla.gnome.org/show_bug.cgi?id=676038